# postflop-solver-custom

./: .gitignore  BENCHMARK.md  CARD_AND_SHOWDOWN_IMPLEMENTATION.md  CS-CFR.md  CS_CFR_WARM_START_PLAN.md  Cargo.toml  DCFR_PLUS_ALGORITHM.md  MISC_STORAGE_ANALYSIS.md  MULTITHREADING_OPTIMIZATION_STUDY.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_PLAN.md  PDCFR_PLUS_IMPLEMENTATION_PLAN.md  PDCFRplus.md  README.md  REFACTORING_NEXT_STEPS.md  REGRESSION_ANALYSIS.md  REPORT_TECNICO_STRATEGY_BITS.md  SAPCFRplus.md  SIMD_OPTIMIZATION_CANDIDATES.md  STRATEGY_BITS_REPORT.md  benchmark.sh  benchmark_allocators.sh  benchmark_dcfr.toml  benchmark_dcfr_plus.toml  benchmark_node_03.sh  benchmark_sapcfr_plus.toml  compare_benchmarks.sh  config.toml  dcfrplus.md  fix.md  memory.md  optimization.md  plan.md  pruning_new.md  test_baseline.toml  test_both8.toml  test_chance_bits.rs  test_chance_bits_16.toml  test_chance_bits_config.toml  test_dcfr_plus.rs  (+4 more)
benchmark_configs/: full_no_pruning.toml  full_pruning.toml  full_pruning_avg.toml  quick_no_pruning.toml  quick_pruning.toml  quick_pruning_avg.toml
benchmarks/: BASELINE_LARGE.json  allocator_comparison_20260107_171755.json  allocator_comparison_20260107_171755.md  allocator_comparison_20260107_172029.json  allocator_comparison_20260107_172029.md  baseline_20260107_162351.json  baseline_20260107_162351.md  baseline_3ef7768_20260108_112749.json  baseline_3ef7768_20260108_112749.md  baseline_5run_20260108_114312.json  baseline_5run_20260108_114312.md  baseline_no_pruning_20260108_124632.json  baseline_no_pruning_20260108_124632.md  (+57 more)
(+76 files in other folders)
