[package]
name = "postflop-solver"
version = "0.1.0"
authors = ["Wataru Inariba"]
edition = "2021"
description = "An open-source postflop solver for Texas hold'em poker"
documentation = "https://b-inary.github.io/postflop_solver/postflop_solver/"
repository = "https://github.com/b-inary/postflop-solver"
license = "AGPL-3.0-or-later"

[dependencies]
bincode = { version = "2.0.0-rc.3", optional = true }
once_cell = "1.18.0"
rayon = { version = "1.8.0", optional = true }
regex = "1.9.6"
rustc-hash = "2.0"
zstd = { version = "0.12.4", optional = true, default-features = false }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
mimalloc = { version = "0.1", default-features = false, optional = true }
tikv-jemallocator = { version = "0.6", optional = true }
tcmalloc = { version = "0.3", optional = true }

[features]
default = ["bincode", "rayon", "zstd"]
custom-alloc = []
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:tikv-jemallocator"]
tcmalloc = ["dep:tcmalloc"]
rayon = ["dep:rayon", "zstd?/zstdmt"]
serde = []
